--- a/internship/internship.vcxproj.filters
+++ b/internship/internship.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Server.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="IPainter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
